--- a/F401/stm32F401CxUx.ioc
+++ b/F401/stm32F401CxUx.ioc
@@ -38,9 +38,10 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=RTC
 Mcu.IP6=SYS
-Mcu.IP7=USB_DEVICE
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP7=TIM2
+Mcu.IP8=USB_DEVICE
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -51,7 +52,8 @@ Mcu.Pin12=VP_ADC1_Vref_Input
 Mcu.Pin13=VP_RTC_VS_RTC_Activate
 Mcu.Pin14=VP_RTC_VS_RTC_Calendar
 Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -60,7 +62,7 @@ Mcu.Pin6=PA12
 Mcu.Pin7=PA13
 Mcu.Pin8=PA14
 Mcu.Pin9=PB6
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -119,7 +121,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F401CCUx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.1
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x800
 ProjectManager.KeepUserCode=true
@@ -136,7 +138,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -175,6 +177,9 @@ RCC.VcooutputI2S=96000000
 RTC.Format=RTC_FORMAT_BIN
 RTC.IPParameters=Format,TimeStampPin
 RTC.TimeStampPin=RTC_TIMESTAMPPIN_DEFAULT
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=100-1
+TIM2.Prescaler=840-1
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_DEBUG_LEVEL
 USB_DEVICE.USBD_DEBUG_LEVEL=0
@@ -192,6 +197,8 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=custom
