Figure out USB later

--- a/F401/stm32F401CxUx.ioc
+++ b/F401/stm32F401CxUx.ioc
@@ -182,8 +182,11 @@ TIM2.IPParameters=Prescaler,Period
 TIM2.Period=100-1
 TIM2.Prescaler=840-1
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_DEBUG_LEVEL
-USB_DEVICE.USBD_DEBUG_LEVEL=0
+USB_DEVICE.CUSTOM_HID_FS_BINTERVAL=0x01
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_DEBUG_LEVEL,PRODUCT_STRING_CUSTOMHID_FS,USBD_CUSTOM_HID_REPORT_DESC_SIZE,CUSTOM_HID_FS_BINTERVAL
+USB_DEVICE.PRODUCT_STRING_CUSTOMHID_FS=Smart Rotate V0.1
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=92
+USB_DEVICE.USBD_DEBUG_LEVEL=3
 USB_DEVICE.VirtualMode=CustomHid
 USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 USB_OTG_FS.IPParameters=VirtualMode
